--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.h2database:h2'
     implementation 'javax.xml.bind:jaxb-api:2.3.1'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation'
 
     compileOnly 'org.projectlombok:lombok:1.18.24'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
